--- a/index.html
+++ b/index.html
@@ -219,11 +219,12 @@
 							<!-- <p class="active">программирование</p> -->
 							<p class="active">второй лендинг -40%</p>
 							<p class="noactive">панель управления</p>
-							<p class="noactive">написание текста</p>
+							<!-- <p class="noactive">написание текста</p> -->
 							<p class="noactive">регистрация и подключение домена</p>
-							<p class="noactive">хостинг на год</p>
+							<p class="noactive">хостинг</p>
 							<p class="noactive">настройка Яндекс метрики</p>
-							<p class="noactive">создание рекламной компании в Яндекс</p>
+							<p class="noactive">on-line чат с посетителями</p>
+							<p class="noactive">создание и ведение рекламной компании</p>
 							<p class="noactive">сопровождение 1 месяц</p>
 						</div>
 						<div class="price-item__footer">
@@ -243,11 +244,12 @@
 							<!-- <p class="active">программирование</p> -->
 							<p class="active">второй лендинг -40%</p>
 							<p class="active">панель управления</p>
-							<p class="active">написание текста</p>
+							<!-- <p class="active">написание текста</p> -->
 							<p class="active">регистрация и подключение домена</p>
 							<p class="active">хостинг на <strong>месяц</strong></p>
 							<p class="noactive">настройка Яндекс метрики</p>
-							<p class="noactive">создание рекламной компании в Яндекс</p>
+							<p class="noactive">on-line чат с посетителями</p>
+							<p class="noactive">создание и ведение рекламной компании</p>
 							<p class="noactive">сопровождение 1 месяц</p>
 						</div>
 						<div class="price-item__footer">
@@ -267,11 +269,12 @@
 							<!-- <p class="active">программирование</p> -->
 							<p class="active">второй лендинг -40%</p>
 							<p class="active">панель управления</p>
-							<p class="active">написание текста</p>
+							<!-- <p class="active">написание текста</p> -->
 							<p class="active">регистрация и подключение домена</p>
 							<p class="active">хостинг на <strong>6</strong> месяцев</p>
 							<p class="active">настройка Яндекс метрики</p>
-							<p class="noactive">создание рекламной компании в Яндекс</p>
+							<p class="noactive">on-line чат с посетителями</p>
+							<p class="noactive">создание и ведение рекламной компании</p>
 							<p class="active">сопровождение 1 месяц</p>
 						</div>
 						<div class="price-item__footer">
@@ -291,15 +294,16 @@
 							<!-- <p class="active">программирование</p> -->
 							<p class="active">второй лендинг -40%</p>
 							<p class="active">панель управления</p>
-							<p class="active">написание текста</p>
+							<!-- <p class="active">написание текста</p> -->
 							<p class="active">регистрация и подключение домена</p>
 							<p class="active">хостинг на <strong>год</strong></p>
 							<p class="active">настройка Яндекс метрики</p>
-							<p class="active">создание рекламной компании в Яндекс</p>
+							<p class="active">on-line чат с посетителями</p>
+							<p class="active">создание и ведение рекламной компании</p>
 							<p class="active">сопровождение 1 месяц</p>
 						</div>
 						<div class="price-item__footer">
-							22 990 руб.
+							27 990 руб.
 						</div>
 					</div>
 				</div>
